// protoc -I=. --go_out=.. ./schema.proto
syntax = "proto3";
package distributed;

option go_package = "pkg/networking";

message ExecuteCommandRequest {
  oneof operation {
    GetRequest get = 1;
    PutRequest put = 2;
  }
}

message GetRequest {
  string key = 1;
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message ExecuteCommandResponse {
  oneof result {
    bytes value = 1;
    string error = 2;
  }
}
